fixed-desktop spacing

--- a/style.css
+++ b/style.css
@@ -91,10 +91,28 @@ body {
     .card {
         display: flex;
         max-width:730px;
-        border-radius: 8px;
+        border-radius: 16px;
     }
     .card__img {
-        width: 285px
-        border-radius: 0;
+        width: 285px;
+        height: 280px;
+        object-fit: cover;
+        border-radius: 16px 0 0 16px;
     }
+
+
+.card__heading {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.3;
+    margin-bottom: 1.5rem;
+    letter-spacing: .25px;
+}
+
+.card__text {
+    margin-bottom: 1.5rem;
+     color:#9DAEC2;
+     line-height: 1.4;
+    
+}
 }
